# sensor-degradation-filter-real-kheperaiv

./: .gitignore  README.md
argos/: controller_config.argos
docker/: DockerfileBase  DockerfileController  image_build_script.sh
scripts/: cross_compile_binaries.sh  image_build_script.sh  install.sh  setup.sh
src/: CMakeLists.txt
src/algorithms/: BayesCPF.cpp  BayesCPF.hpp  CMakeLists.txt  CollectivePerception.cpp  CollectivePerception.hpp  EKF.cpp  EKF.hpp  SensorDegradationFilter.hpp
src/cmake/: ARGoSBuildChecks.cmake  ARGoSBuildFlags.cmake  ARGoSBuildOptions.cmake  ARGoSPackaging.cmake  TargetKheperaIV.cmake
src/controllers/: BayesCPFDiffusionController.cpp  BayesCPFDiffusionController.hpp  CMakeLists.txt
src/messages/: CMakeLists.txt  RobotServerMessage.hpp
